# react-wasm-vite-boilerplate

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx
src/components/: Counter.tsx
src/wasm/: lib.rs
